<resources>
    <string name="app_name">Jerry</string>
    <string name="user">Vartotojas</string>
    <string name="password">Slaptažodis</string>
    <string name="login">Prisijungti</string>
    <string name="settings">Nustatymai</string>
    <string name="error_login">Klaida:</string>
    <string name="copyrigth">Copyright ©Jerry-Sprendimai</string>
    <string name="cancel">Atšaukti</string>
    <string name="item_save">Išsaugoti</string>
    <string name="dbURL">URL</string>
    <string name="dbServer">DB Server</string>
    <string name="dbNAme">DB Name</string>
    <string name="dbUser">DB User</string>
    <string name="dbPassword">DB Password</string>
    <string name="test_connection">Testuoti</string>
    <string name="dbA1">Admin User</string>
    <string name="dbA2">Admin Password</string>
    <string name="get_settings">Parsisiųsti</string>
    <string name="users">Vartotojai</string>
    <string name="no_login">Neteisingas Vartotojo vardas ir/arba slaptažodis</string>
    <string name="work">Objektai</string>
    <string name="chat">Chat</string>
    <string name="dealers">Tiekėjai</string>
    <string name="user_level">Lygis</string>
    <string name="user_fname">Vardas</string>
    <string name="user_lname">Pavardė</string>
    <string name="admin">Administratorius</string>
    <string name="owner">Vadovas</string>
    <string name="employee">Darbuotojas</string>
    <string name="user_uname">Vartotojas</string>
    <string name="user_password">Slaptažodis</string>
    <string name="reg_date">Registracija</string>
    <string name="last_login">Buvo prisijungta</string>
    <string name="error">tuščia</string>
    <string name="exists">jau egzistuoja</string>
    <string name="saved">Išsaugota</string>
    <string name="deleted">Ištrinta</string>
    <string name="issue">Klaida</string>
    <string name="object_name">Objektas</string>
    <string name="object_customer">Užsakovas</string>
    <string name="object_completness">Baigtumas</string>
    <string name="assigned_emploees">Priskirta darbuotojų</string>
    <string name="object_date">Darbų pradžia:</string>
    <string name="object_work_count">Darbai:</string>
    <string name="object_work_done">Užbaigta:</string>
    <string name="locked_by">Redaguoja</string>
    <string name="locked">Užrakinta</string>
    <string name="id">ID:</string>
    <string name="add_job">Pridėti darbą</string>
    <string name="object_address">Adresas</string>
    <string name="object_jobName">Darbo pavadinimas</string>
    <string name="object_jobDescription">Aprašymas</string>
    <string name="object_foto">Foto</string>
    <string name="objectDetails_switchButton_label">Užbaigti darbą</string>
    <string name="object_jobDone">Užbaigtas</string>
    <string name="job_begin">Darbų pradžia</string>
    <string name="not_saved">Pakeitimai neišsaugoti. Išeiti?</string>
    <string name="new_version">Yra nauja \"Jerry\" versija. Parsisiųsti?</string>
    <string name="version">versija</string>
    <string name="session_expired">Sesija baigėsi</string>
    <string name="exit">Išeiti?</string>
    <string name="calendar">Kalendorius</string>
    <string name="new_object">Naujas!</string>
    <string name="participant_count">Darbuotojų skaičius</string>
    <string name="my_profile">Mano Profilis</string>
    <string name="profile">Profilis</string>
    <string name="dealer_email">E-Mail: </string>
    <string name="orders">Užsakymai</string>
    <string name="order">Užsakyti</string>
    <string name="dealer">Tiekėjas</string>
    <string name="proceed">Toliau</string>
    <string name="back">Atgal</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="to">Tiekėjas/Obj.</string>
    <string name="message">Žinutė</string>
    <string name="place_order">Siųsti</string>
    <string name="send">Siųsti</string>
    <string name="inquiry">Užklausa</string>
    <string name="email">e-Paštas</string>
    <string name="email_mailbox_label">mailbox</string>
    <string name="inbox">inbox</string>
    <string name="sent">sent</string>
    <string name="mailbox">Paštas</string>
    <string name="email_show_all">Rodyti visus</string>
    <string name="all_email">All</string>
    <string name="from">From</string>
    <string name="email_from">From</string>
    <string name="email_to">To</string>
    <string name="email_subject">Subject</string>
    <string name="attachment">Priedai</string>
    <string name="reply">Atsakyti</string>
    <string name="forward">Persiųsti</string>
    <string name="delete">Ištrinti</string>
    <string name="assign_object">Priskirti Objektą</string>
    <string name="email_sent">Laiškas išsiųstas</string>
    <string name="email_not_sent">Išsiųsti nepavyko</string>
    <string name="mail">E-Laiškas</string>
    <string name="forwarding">Persiunčiama</string>
    <string name="replying">Atrašyti</string>
    <string name="dealer_name">Tiekėjo Vardas/Pavadinimas</string>
    <string name="error_email">klaida</string>
    <string name="not_supported">Blogas failo formatas</string>
</resources>