<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ActivitySettings"
    android:background="@drawable/background">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp">
        <ImageView
            android:id="@+id/jerryIcon"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp"
            android:background="@android:color/transparent"
            app:srcCompat="@mipmap/ic_jerry_foreground" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="-20dp"
            android:layout_marginBottom="0dp"
            android:orientation="vertical">

            <ScrollView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:orientation="vertical">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:backgroundTint="@color/jerry_light_opacity"
                        app:cardCornerRadius="5dp"
                        app:cardElevation="1dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:orientation="vertical">
                            <TextView
                                android:padding="5dp"
                                android:id="@+id/settings_version"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:hint="@string/version"
                                android:fontFamily="@font/poppinsmedium"
                                android:textColorHint="@color/jerry_grey">
                            </TextView>
                            <com.google.android.material.textfield.TextInputLayout
                                style="@style/Input_layout"
                                android:layout_gravity="left"
                                android:padding="5dp"
                                app:passwordToggleEnabled="true">
                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/settings_URL"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:backgroundTint="@color/jerry_blue"
                                    android:ems="12"
                                    android:fontFamily="@font/poppinsmedium"
                                    android:hint="@string/dbURL"
                                    android:inputType="textPassword"
                                    android:textColor="@color/black"
                                    android:textColorHint="@color/black"
                                    android:textSize="15sp" />
                            </com.google.android.material.textfield.TextInputLayout>

                            <com.google.android.material.textfield.TextInputLayout
                                style="@style/Input_layout"
                                android:layout_gravity="left"
                                android:padding="5dp">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/settings_dbServer"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:backgroundTint="@color/jerry_blue"
                                    android:ems="12"
                                    android:fontFamily="@font/poppinsmedium"
                                    android:hint="@string/dbServer"
                                    android:inputType="textPassword"
                                    android:textColor="@color/black"
                                    android:textColorHint="@color/black"
                                    android:textSize="15sp" />
                            </com.google.android.material.textfield.TextInputLayout>

                            <com.google.android.material.textfield.TextInputLayout
                                style="@style/Input_layout"
                                android:layout_gravity="left"
                                android:padding="5dp">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/settings_dbName"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:backgroundTint="@color/jerry_blue"
                                    android:ems="12"
                                    android:fontFamily="@font/poppinsmedium"
                                    android:hint="@string/dbNAme"
                                    android:inputType="textPassword"
                                    android:textColor="@color/black"
                                    android:textColorHint="@color/black"
                                    android:textSize="15sp" />
                            </com.google.android.material.textfield.TextInputLayout>

                            <com.google.android.material.textfield.TextInputLayout
                                style="@style/Input_layout"
                                android:layout_gravity="left"
                                android:padding="5dp">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/settings_dbUser"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:backgroundTint="@color/jerry_blue"
                                    android:ems="12"
                                    android:fontFamily="@font/poppinsmedium"
                                    android:hint="@string/dbUser"
                                    android:inputType="textPassword"
                                    android:textColor="@color/black"
                                    android:textColorHint="@color/black"
                                    android:textSize="15sp" />
                            </com.google.android.material.textfield.TextInputLayout>

                            <com.google.android.material.textfield.TextInputLayout
                                style="@style/Input_layout"
                                android:layout_gravity="left"
                                android:padding="5dp">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/settings_dbPasswd"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:backgroundTint="@color/jerry_blue"
                                    android:ems="12"
                                    android:fontFamily="@font/poppinsmedium"
                                    android:hint="@string/dbPassword"
                                    android:inputType="textPassword"
                                    android:textColor="@color/black"
                                    android:textColorHint="@color/black"
                                    android:textSize="15sp" />
                            </com.google.android.material.textfield.TextInputLayout>

                            <Button
                                android:id="@+id/btTestConnection"
                                style="?android:attr/borderlessButtonStyle"
                                android:layout_width="220dp"
                                android:layout_height="35dp"
                                android:layout_gravity="center_horizontal"
                                android:layout_marginTop="10dp"
                                android:layout_marginBottom="0dp"
                                android:background="@drawable/round_button"
                                android:clickable="true"
                                android:padding="5dp"
                                android:text="@string/test_connection"
                                android:textColor="@color/white"
                                android:textSize="15sp"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginBottom="50dp"
                        android:backgroundTint="@color/jerry_light_opacity"
                        app:cardCornerRadius="5dp"
                        app:cardElevation="1dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:orientation="vertical">

                            <com.google.android.material.textfield.TextInputLayout
                                style="@style/Input_layout"
                                android:layout_gravity="left"
                                android:padding="5dp">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/settings_dbConfig_1"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:backgroundTint="@color/jerry_blue"
                                    android:ems="12"
                                    android:fontFamily="@font/poppinsmedium"
                                    android:hint="@string/dbA1"
                                    android:inputType="textPassword"
                                    android:textColor="@color/black"
                                    android:textColorHint="@color/black"
                                    android:textSize="15sp" />
                            </com.google.android.material.textfield.TextInputLayout>

                            <com.google.android.material.textfield.TextInputLayout
                                style="@style/Input_layout"
                                android:layout_gravity="left"
                                android:padding="5dp">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/settings_dbConfig_2"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:backgroundTint="@color/jerry_blue"
                                    android:ems="12"
                                    android:fontFamily="@font/poppinsmedium"
                                    android:hint="@string/dbA2"
                                    android:inputType="textPassword"
                                    android:textColor="@color/black"
                                    android:textColorHint="@color/black"
                                    android:textSize="15sp" />
                            </com.google.android.material.textfield.TextInputLayout>

                            <Button
                                android:id="@+id/btGetSettings"
                                style="?android:attr/borderlessButtonStyle"
                                android:layout_width="220dp"
                                android:layout_height="35dp"
                                android:layout_gravity="center_horizontal"
                                android:layout_marginTop="10dp"
                                android:layout_marginBottom="0dp"
                                android:background="@drawable/round_button"
                                android:clickable="true"
                                android:padding="5dp"
                                android:text="@string/get_settings"
                                android:textColor="@color/white"
                                android:textSize="15sp"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>


                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </LinearLayout>

    <!--<include layout="@layout/layout_footer" />-->
    <include layout="@layout/layout_save_cancel"/>
</androidx.drawerlayout.widget.DrawerLayout>