<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".FragmentOrderPart1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="30dp"
        android:layout_margin="5dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/dealer"
            android:layout_gravity="center"
            style="@style/Menu_Item_EditText"
            android:labelFor="@+id/cardView_oder_p1_dealer"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">
            <androidx.cardview.widget.CardView
                android:id="@+id/cardView_oder_p1_dealer"
                android:layout_width="260dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                app:cardCornerRadius="5dp">
            </androidx.cardview.widget.CardView>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/my_recycle_view_dealer"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:scrollbars="vertical">
            </androidx.recyclerview.widget.RecyclerView>
            <androidx.cardview.widget.CardView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginLeft="10dp"
                android:layout_gravity="center_vertical"
                android:backgroundTint="@color/fab_color"
                app:cardCornerRadius="20dp">
                <LinearLayout
                    android:id="@+id/linearLayout_oder_p1_dealer_button"
                    style="@style/Menu_Item_LinearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="true"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/ic_add_white">
                    </ImageView>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="0dp"
        android:layout_margin="5dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/object_name"
            android:layout_gravity="center"
            style="@style/Menu_Item_EditText"
            android:labelFor="@+id/cardView_oder_p1_object"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">
            <androidx.cardview.widget.CardView
                android:id="@+id/cardView_oder_p1_object"
                android:layout_width="260dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                app:cardCornerRadius="5dp">
            </androidx.cardview.widget.CardView>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/my_recycle_view_object"
                android:visibility="gone"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:scrollbars="vertical">
            </androidx.recyclerview.widget.RecyclerView>
            <androidx.cardview.widget.CardView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginLeft="10dp"
                android:layout_gravity="center_vertical"
                android:backgroundTint="@color/fab_color"
                app:cardCornerRadius="20dp">
                <LinearLayout
                    android:id="@+id/linearLayout_oder_p1_object_button"
                    style="@style/Menu_Item_LinearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="true"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/ic_add_white">
                    </ImageView>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:paddingTop="0dp"
        android:layout_margin="3dp"
        android:layout_gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_order_p1_continue"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_gravity="right"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/round_button"
            android:clickable="true"
            android:padding="5dp"
            android:text="@string/proceed"
            android:textAllCaps="false"
            android:drawableEnd="@drawable/ic_arrow_right_white"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            tools:ignore="TouchTargetSizeCheck" />

    </LinearLayout>

</LinearLayout>